Fixed project flex gap

--- a/website/projects.css
+++ b/website/projects.css
@@ -24,7 +24,7 @@
 
 .project_info {
     display: flex;
-    gap: 48px;
+    gap: 36px;
 }
 
 .project img {
